--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.6",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.6",
     "@angular/compiler": "~8.2.6",
     "@angular/core": "~8.2.6",
@@ -31,6 +32,7 @@
     "@clr/icons": "^2.2.0",
     "@clr/ui": "^2.2.0",
     "@ng-select/ng-select": "^2.20.0",
+    "@swimlane/ngx-graph": "^6.2.0",
     "@types/cytoscape": "^3.8.2",
     "@webcomponents/custom-elements": "^1.0.0",
     "core-js": "^2.5.4",
